# SVGProject

./: CMakeLists.txt  README.md  kaddshapecommand.h  kbubble.cpp  kbubble.h  kcanvasmenu.cpp  kcanvasmenu.h  kcanvasparamsbar.cpp  kcanvasparascommand.cpp  kcanvasparascommand.h  kcircle.cpp  kclipboard.cpp  kcolorbox.cpp  kcolorbox.h  kcombobox.cpp  kcombobox.h  kfilemenubar.cpp  kfilemenubar.h  khexa.cpp  khexa.h  kline.cpp  kparamsbar.cpp  kpent.cpp  krect.cpp  krect.h  kshape.h  kshapefactory.cpp  kstar.cpp  kstar.h  ksvgmainwindow.cpp  ksvgmainwindow.h  ktext.h  ktoolbar.h  ktoolbutton.cpp  kvaluebox.h  main.cpp  mainwindow.h
SvgEditorProject/: README.md  Resource.qrc  kaddshapecommand.cpp  kcanvas.cpp  kcanvas.h  kcanvasparamsbar.h  kcircle.h  kclipboard.h  kdeleteshapecommand.cpp  kdeleteshapecommand.h  kglobaldata.cpp  kglobaldata.h  kheart.cpp  kheart.h  kline.h  kparambox.cpp  kparambox.h  kparamsbar.h  kpen.cpp  kpen.h  kpent.h  kshape.cpp  kshapefactory.h  kshapeparamsbar.cpp  kshapeparamsbar.h  kshapeparascommand.cpp  kshapeparascommand.h  ktext.cpp  ktoolbar.cpp  ktoolbutton.h  kvaluebox.cpp  mainwindow.cpp  mainwindow.ui
